Hide sections when checks are in progress
So it is hidden by default;
And when `isCanceled` was set as: `true`.

So it's only shown when its state is explicitly set do so so.

--- a/interfaces/PA-App/src/app/personal-components/set-notification-number/set-notification-number.component.html
+++ b/interfaces/PA-App/src/app/personal-components/set-notification-number/set-notification-number.component.html
@@ -1,4 +1,4 @@
-<section *ngIf="!isCanceled">
+<section *ngIf="isCanceled === false">
   <dialogue-turn>
     <p>
       <play-text-audio key="personal.set-notification-number.introduction1" class="ion-float-start ion-margin-end"></play-text-audio>
