--- a/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
+++ b/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
@@ -1,4 +1,4 @@
-<section *ngIf="!isCanceled">
+<section *ngIf="isCanceled === false">
   <dialogue-turn *ngIf="credentialReceived"
                  [isSpoken]="credentialReceived"
   >
