--- a/interfaces/PA-App/src/app/personal-components/contact-details/contact-details.component.html
+++ b/interfaces/PA-App/src/app/personal-components/contact-details/contact-details.component.html
@@ -1,4 +1,4 @@
-<section *ngIf="!isCanceled">
+<section *ngIf="isCanceled === false">
   <dialogue-turn [isConnected]="true">
     <p
       [innerHTML]="contactDetails"
