Tweak layout + scroll behaviour of "enroll-in-program"-component
Related AB#3068

--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -34,10 +34,10 @@
                  *ngIf="hasAnswered"
                  [isSpoken]="hasAnswered"
   >
-    <ul>
-      <li *ngFor="let question of questions">
+    <ul class="ion-padding-start">
+      <li *ngFor="let question of questions" class="ion-margin-vertical">
         <span [innerHTML]="question.label"></span><br>
-        <strong>{{ answers[question.code]?.label }}</strong>
+        <strong class="answer-emphasis">{{ answers[question.code]?.label }}</strong>
       </li>
     </ul>
 
