--- a/interfaces/HO-Portal/src/app/programs-list/programs-list.component.html
+++ b/interfaces/HO-Portal/src/app/programs-list/programs-list.component.html
@@ -21,7 +21,7 @@
           {{ program.description }}
         </ion-note>
         <ion-note class="ion-float-end ion-padding-end">
-          {{ program.updated|date:"dd-MM-y - H:m" }}
+          {{ program.updated|date:"yyyy-MM-dd, HH:mm" }}
         </ion-note>
       </ion-label>
     </ion-item>
