--- a/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
@@ -51,13 +51,7 @@
         key="personal.select-fsp.conclusion"
         class="ion-float-start ion-margin-end"
       ></play-text-audio>
-      <span
-        [innerHTML]="
-          'personal.select-fsp.conclusion'
-            | translate
-              : { name: '<strong>' + chosenFsp?.fspDisplayName + '</strong>' }
-        "
-      ></span>
+      <span [innerHTML]="'personal.select-fsp.conclusion'|translate:{ name: '<strong>' + chosenFsp?.fspDisplayName + '</strong>' }"></span>
     </p>
   </dialogue-turn>
 
