--- a/interfaces/PA-App/src/app/user-menu/user-menu.component.html
+++ b/interfaces/PA-App/src/app/user-menu/user-menu.component.html
@@ -5,12 +5,11 @@
               (click)="logout()"
               detail="true"
               detail-icon="log-out"
-              class="ion-text-nowrap"
     >
       <ion-text>
         {{ 'account.logout'|translate }}
       </ion-text>
-      <ion-text class="ion-margin-start ion-text-ellipsis">
+      <ion-text class="ion-margin-start">
         <strong>{{ username }}</strong>
       </ion-text>
     </ion-item>
