a11y: Improvement to (named-)icons, adding aria-labels

--- a/interfaces/PA-App/src/app/shared/play-text-audio/play-text-audio.component.html
+++ b/interfaces/PA-App/src/app/shared/play-text-audio/play-text-audio.component.html
@@ -10,13 +10,15 @@
             (click)="toggleState()"
             class="play-text-audio"
 >
-  <img *ngIf="iconName === 'play'" 
-       src="./assets/icons/ear-outline-white.svg" 
+  <img *ngIf="iconName === 'play'"
+       src="./assets/icons/ear-outline-white.svg"
        class="ear-icon"
+       aria-hidden="true"
   >
-  <ion-icon *ngIf="iconName !== 'play'" 
+  <ion-icon *ngIf="iconName !== 'play'"
             [name]="iconName"
             size="small"
             slot="icon-only"
+            aria-hidden="true"
   ></ion-icon>
 </ion-button>
