--- a/interfaces/PA-App/src/app/personal-components/preprinted-qrcode/preprinted-qrcode.component.html
+++ b/interfaces/PA-App/src/app/personal-components/preprinted-qrcode/preprinted-qrcode.component.html
@@ -64,7 +64,7 @@
                   expand="block"
                   style="flex-basis:100%"
       >
-        <ion-icon name="qr-scanner" slot="start" size="small"></ion-icon>
+        <ion-icon name="qr-scanner" slot="start" size="small" aria-hidden="true"></ion-icon>
         {{ 'personal.preprinted-qrcode.start-scanner'|translate }}
       </ion-button>
     </ion-row>
