--- a/interfaces/PA-App/src/app/shared/info-popup/info-popup.component.html
+++ b/interfaces/PA-App/src/app/shared/info-popup/info-popup.component.html
@@ -9,17 +9,19 @@
       <ng-container *ngIf="!headingKey && !heading">{{ 'shared.more-info'|translate }}</ng-container>
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="close()"
-                  [title]="'shared.close-button'|translate"
-                  [aria-label]="'shared.close-button'|translate"
+      <ion-button
+        (click)="close()"
+        [title]="'shared.close-button'|translate"
+        [attr.aria-label]="'shared.close-button'|translate"
       >
-        <ion-icon name="close" slot="icon-only"></ion-icon>
+        <ion-icon name="close" slot="icon-only" aria-hidden="true"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content fullscreen
-             class="ion-padding"
+<ion-content
+  fullscreen
+  class="ion-padding"
 >
   <div *ngIf="messageKey" class="ion-float-end ion-margin-start">
     <play-text-audio [key]="messageKey"></play-text-audio>
