--- a/interfaces/PA-App/src/app/shared/qr-scanner/qr-scanner.component.html
+++ b/interfaces/PA-App/src/app/shared/qr-scanner/qr-scanner.component.html
@@ -4,8 +4,12 @@
       {{ 'qr-scanner.title'|translate }}
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="closeModal()" [attr.title]="'qr-scanner.close'|translate">
-        <ion-icon name="close" slot="icon-only"></ion-icon>
+      <ion-button
+        (click)="closeModal()"
+        [attr.title]="'qr-scanner.close'|translate"
+        [attr.aria-label]="'qr-scanner.close'|translate"
+      >
+        <ion-icon name="close" slot="icon-only" aria-hidden="true"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -18,7 +22,7 @@
   <div *ngIf="showCompatibilityError || showPermissionError"
        class="ion-text-center ion-padding"
   >
-    <ion-icon name="alert" size="large"></ion-icon>
+    <ion-icon name="alert" size="large" aria-hidden="true"></ion-icon>
     <p *ngIf="showCompatibilityError">
       {{ 'qr-scanner.error-not-compatible'|translate }}
     </p>
@@ -29,27 +33,29 @@
       {{ 'qr-scanner.error-generic'|translate }}
     </p>
     <p class="ion-margin-top ion-text-center">
-      <ion-button type="button"
-                  (click)="tryAgain()"
+      <ion-button
+        type="button"
+        (click)="tryAgain()"
       >
-        <ion-icon name="refresh" size="small" slot="start"></ion-icon>
+        <ion-icon name="refresh" size="small" slot="start" aria-hidden="true"></ion-icon>
         {{ 'qr-scanner.try-again'|translate }}
       </ion-button>
     </p>
   </div>
 
-  <zxing-scanner #scanner
-                 [device]="currentCamera"
-                 previewFitMode="fill"
-                 (hasDevices)="onHasDevices($event)"
-                 (permissionResponse)="onPermissionResponse($event)"
-                 (torchCompatible)="onTorchCompatible($event)"
-                 [torch]="torchEnabled"
-                 (camerasFound)="onCamerasFound($event)"
-                 (camerasNotFound)="onCamerasNotFound()"
-                 (scanSuccess)="onScanSuccess($event)"
-                 (scanError)="onScanError()"
-                 class="qr-scanner--zxing-component"
+  <zxing-scanner
+    #scanner
+    [device]="currentCamera"
+    previewFitMode="fill"
+    (hasDevices)="onHasDevices($event)"
+    (permissionResponse)="onPermissionResponse($event)"
+    (torchCompatible)="onTorchCompatible($event)"
+    [torch]="torchEnabled"
+    (camerasFound)="onCamerasFound($event)"
+    (camerasNotFound)="onCamerasNotFound()"
+    (scanSuccess)="onScanSuccess($event)"
+    (scanError)="onScanError()"
+    class="qr-scanner--zxing-component"
   ></zxing-scanner>
 
   <ion-spinner name="dots"
@@ -57,21 +63,23 @@
   ></ion-spinner>
 
   <ion-fab vertical="top" horizontal="end" slot="fixed">
-    <ion-fab-button *ngIf="torchAvailable"
-                    [title]="'qr-scanner.toggle-flash'|translate"
-                    (click)="torchEnabled=!torchEnabled"
-                    [color]="torchEnabled ? 'success' : 'light'"
-                    class="ion-margin-vertical"
+    <ion-fab-button
+      *ngIf="torchAvailable"
+      [title]="'qr-scanner.toggle-flash'|translate"
+      (click)="torchEnabled=!torchEnabled"
+      [color]="torchEnabled ? 'success' : 'light'"
+      class="ion-margin-vertical"
     >
-      <ion-icon [name]="torchEnabled ? 'flash' : 'flash-off'"></ion-icon>
+      <ion-icon [name]="torchEnabled ? 'flash' : 'flash-off'" aria-hidden="true"></ion-icon>
     </ion-fab-button>
-    <ion-fab-button *ngIf="switchCamerasAvailable"
-                    [title]="'qr-scanner.switch-camera'|translate"
-                    (click)="switchCamera()"
-                    color="light"
-                    class="ion-margin-vertical"
+    <ion-fab-button
+      *ngIf="switchCamerasAvailable"
+      [title]="'qr-scanner.switch-camera'|translate"
+      (click)="switchCamera()"
+      color="light"
+      class="ion-margin-vertical"
     >
-      <ion-icon name="reverse-camera"></ion-icon>
+      <ion-icon name="reverse-camera" aria-hidden="true"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
@@ -93,7 +101,7 @@
     class="ion-no-margin"
     (click)="onScanSuccess(scanData.value)"
   >
-    <ion-icon name="create" slot="start"></ion-icon>
+    <ion-icon name="create" slot="start" aria-hidden="true"></ion-icon>
     Use as scanned data
   </ion-button>
 </ion-footer>
