Fix: remove unnecessary parameter/argument

--- a/interfaces/PA-App/src/app/tabs/tabs.page.html
+++ b/interfaces/PA-App/src/app/tabs/tabs.page.html
@@ -39,7 +39,7 @@
 
     <ion-tab-button
       [disabled]="!isLoggedIn"
-      (click)="openUserMenu($event)"
+      (click)="openUserMenu()"
       layout="label-hide"
       [title]="'tabs.account'|translate"
     >
