feat: referral app feedback changes

--- a/interfaces/Referral-App/src/app/help/help.page.html
+++ b/interfaces/Referral-App/src/app/help/help.page.html
@@ -1,8 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title class="ion-text-center">
-      {{ 'tabs.referral-help-title'| translate }}
-    </ion-title>
+    <ion-title class="ion-text-center"> {{ help.helpPageTitle }} </ion-title>
   </ion-toolbar>
 </ion-header>
 
