--- a/interfaces/Referral-App/src/app/referral/referral.page.scss
+++ b/interfaces/Referral-App/src/app/referral/referral.page.scss
@@ -7,9 +7,14 @@ ion-content {
 }
 
 ion-card {
-  width: 300px;
-  margin: 5% auto;
   background: #ffffff;
+  box-shadow: none;
+  white-space: pre-line;
+
+  &.referral-data-unavailable-card {
+    width: 300px;
+    margin: 5% auto;
+  }
 }
 
 a {
