--- a/interfaces/Referral-App/src/app/tabs/tabs.page.html
+++ b/interfaces/Referral-App/src/app/tabs/tabs.page.html
@@ -1,9 +1,9 @@
 <ion-tabs>
   <ion-tab-bar slot="top">
     <ion-tab-button tab="referral" color="primary" layout="label-hide">
-      <ion-icon name="person"></ion-icon>
-      <ion-label></ion-label>
-      <ion-label>{{ 'tabs.actions'|translate }}</ion-label>
+      <ion-thumbnail>
+        <ion-img src="assets/icons/red_cross.png"></ion-img>
+      </ion-thumbnail>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
