fix: hide welcome card on select

--- a/interfaces/Referral-App/src/app/referral/referral.page.html
+++ b/interfaces/Referral-App/src/app/referral/referral.page.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-card>
+  <ion-card *ngIf="!category">
     <ion-card-header>
       <ion-card-title>
         {{ referralPageData.referralPageGreeting }}
