--- a/interfaces/HO-Portal/src/app/program/program-people-affected/program-people-affected.component.scss
+++ b/interfaces/HO-Portal/src/app/program/program-people-affected/program-people-affected.component.scss
@@ -1,4 +1,13 @@
-.failedCell:hover {
-  cursor: pointer;
-  color: #3880ff;
+.status-pop-up {
+  background: transparent;
+  border: 0;
+
+  &:hover,
+  &:focus {
+    color: var(--ion-color-primary);
+  }
+
+  &.is-error {
+    color: var(--ion-color-danger);
+  }
 }
