Use translation for column-label

--- a/interfaces/HO-Portal/src/app/program/program-people-affected/program-people-affected.component.html
+++ b/interfaces/HO-Portal/src/app/program/program-people-affected/program-people-affected.component.html
@@ -104,7 +104,7 @@
   <ngx-datatable-column 
     *ngIf="allPeopleAffected[0]?.vnumber && [phaseEnum.reviewInclusion, phaseEnum.payment].includes(thisPhase) && userRole === userEnum.ProgramManager"
     prop="vnumber"
-    name="V-number"
+    [name]="'page.program.program-people-affected.column.vnumber'|translate"
     minWidth="100"    
     draggable="false"
     resizeable="false"
