--- a/interfaces/PA-App/src/app/personal-components/monitoring-question/monitoring-question.component.html
+++ b/interfaces/PA-App/src/app/personal-components/monitoring-question/monitoring-question.component.html
@@ -7,82 +7,38 @@
   <dialogue-turn actor="self">
       <ion-radio-group (ionChange)="changeMonitoringChoice($event.detail.value)">
         <ion-item
+          *ngFor="let option of monitoringQuestion?.options"
           color="light"
           lines="full"
           class="ion-no-padding"
         >
           <ion-label 
-            [innerHTML]="monitoringQuestion?.option1"
+            [innerHTML]="option.label"
             class="ion-text-wrap ion-padding-end"
           ></ion-label>
           <ion-radio
-            [value]="monitoringChoices.option1"
-            [checked]="monitoringChoice === monitoringChoices.option1"
-            [disabled]="monitoringChosen"
-          ></ion-radio>
-        </ion-item>
-        <ion-item
-          color="light"
-          lines="full"
-          class="ion-no-padding"
-        >
-          <ion-label 
-            [innerHTML]="monitoringQuestion?.option2"
-            class="ion-text-wrap ion-padding-end"
-          ></ion-label>
-          <ion-radio
-            [value]="monitoringChoices.option2"
-            [checked]="monitoringChoice === monitoringChoices.option2"
-            [disabled]="monitoringChosen"
-          ></ion-radio>
-        </ion-item>
-        <ion-item
-          color="light"
-          lines="full"
-          class="ion-no-padding"
-        >
-          <ion-label 
-            [innerHTML]="monitoringQuestion?.option3"
-            class="ion-text-wrap ion-padding-end"
-          ></ion-label>
-          <ion-radio
-            [value]="monitoringChoices.option3"
-            [checked]="monitoringChoice === monitoringChoices.option3"
-            [disabled]="monitoringChosen"
-          ></ion-radio>
-        </ion-item>
-        <ion-item
-          color="light"
-          lines="full"
-          class="ion-no-padding"
-        >
-          <ion-label 
-            [innerHTML]="monitoringQuestion?.option4"
-            class="ion-text-wrap ion-padding-end"
-          ></ion-label>
-          <ion-radio
-            [value]="monitoringChoices.option4"
-            [checked]="monitoringChoice === monitoringChoices.option4"
-            [disabled]="monitoringChosen"
+            [value]="option.option"
+            [checked]="monitoringChoice === option.option"
+            [disabled]="monitoringSubmitted"
           ></ion-radio>
         </ion-item>
       </ion-radio-group>
       <ion-row
-        *ngIf="monitoringChoice && !monitoringChosen"
+        *ngIf="monitoringChoice && !monitoringSubmitted"
         class="ion-nowrap ion-align-items-center ion-margin-top"
       >
         <play-text-audio key="shared.submit-button" size="default"></play-text-audio>
         <ion-button
           type="submit"
           (click)="submitMonitoringAnswer()"
-          [disabled]="monitoringChosen"
+          [disabled]="monitoringSubmitted"
           expand="block"
           style="flex-basis:100%"
         >{{ 'shared.submit-button'|translate }}</ion-button>
       </ion-row>
   </dialogue-turn>
-  <dialogue-turn *ngIf="monitoringChosen"
-                 [isSpoken]="monitoringChosen"
+  <dialogue-turn *ngIf="monitoringSubmitted"
+                 [isSpoken]="monitoringSubmitted"
   >
     <p [innerHTML]="monitoringQuestion?.conclusion">
     </p>
