AB#4833 create test-payment button

--- a/interfaces/HO-Portal/src/app/pages/review-inclusion/review-inclusion.page.html
+++ b/interfaces/HO-Portal/src/app/pages/review-inclusion/review-inclusion.page.html
@@ -11,6 +11,14 @@
     [thisPhaseName]="thisPhase"
     [phaseReady]="true"
   ></app-phase-next>
+  
+  <ion-row>
+    <app-test-payment
+      [programId]="programId"
+      [userRole]="userRole"
+    ></app-test-payment>
+  </ion-row>
+
 
   <ion-row>
     <app-export-list
