AB#4853 add timestamp + cleanup old timestamp

--- a/interfaces/HO-Portal/src/app/program/export-list/export-list.component.html
+++ b/interfaces/HO-Portal/src/app/program/export-list/export-list.component.html
@@ -8,6 +8,6 @@
     {{ btnText }}
   </confirm-prompt>
   <ion-note *ngIf="actionTimestamp" style="display:block">
-    {{ 'page.program.notification.timestamp'|translate }} {{ actionTimestamp }}
+    {{ 'common.timestamp.done'|translate }} {{ actionTimestamp }}
   </ion-note>
 </span>
