--- a/interfaces/HO-Portal/src/app/program/export-list/export-list.component.html
+++ b/interfaces/HO-Portal/src/app/program/export-list/export-list.component.html
@@ -1,13 +1,9 @@
-<span>
-  <confirm-prompt
-    [disabled]="disabled"
-    (confirm)="getExportList()"
-    [subHeader]="subHeader"
-  >
-    <ion-icon name="download" slot="start"></ion-icon>
-    {{ btnText }}
-  </confirm-prompt>
-  <ion-note *ngIf="actionTimestamp" style="display:block">
-    {{ 'page.program.notification.timestamp'|translate }} {{ actionTimestamp }}
-  </ion-note>
-</span>
+<confirm-prompt
+  [disabled]="disabled"
+  (confirm)="getExportList()"
+  [subHeader]="subHeader"
+  [message]="message"
+>
+  <ion-icon name="download" slot="start"></ion-icon>
+  {{ btnText }}
+</confirm-prompt>
