AB#4975 refactor: use variable to use route path in app

--- a/interfaces/Referral-App/src/app/referral/referral.page.html
+++ b/interfaces/Referral-App/src/app/referral/referral.page.html
@@ -85,7 +85,7 @@
   <ion-toolbar>
     <ion-buttons slot="start" *ngIf="category">
       <ion-back-button
-        defaultHref="/tabs/referral"
+        defaultHref="{{defaultHref}}"
         (click)="goBack()"
       ></ion-back-button>
     </ion-buttons>
