--- a/interfaces/Referral-App/src/app/referral/referral.page.html
+++ b/interfaces/Referral-App/src/app/referral/referral.page.html
@@ -85,7 +85,7 @@
   <ion-toolbar>
     <ion-buttons slot="start" *ngIf="category">
       <ion-back-button
-        defaultHref="{{defaultHref}}"
+        defaultHref="{{getRegionHref()}}"
         (click)="goBack()"
       ></ion-back-button>
     </ion-buttons>
