AB#4876 custom rejection message

--- a/interfaces/HO-Portal/src/app/program/program-people-affected/program-people-affected.component.html
+++ b/interfaces/HO-Portal/src/app/program/program-people-affected/program-people-affected.component.html
@@ -17,9 +17,10 @@
   </select>
   <confirm-prompt
     [disabled]="applyBtnDisabled"
-    (confirm)="applyAction()"
+    (confirm)="applyAction($event)"
     [subHeader]="'page.program.program-people-affected.submit-warning'|translate"
     [message]="submitWarning.message"
+    [inputFields]="inputFields"
     class="ion-float-end"
   >
     {{ 'page.program.program-people-affected.apply-action'|translate }}
