--- a/interfaces/Referral-App/src/app/referral/referral.page.html
+++ b/interfaces/Referral-App/src/app/referral/referral.page.html
@@ -90,7 +90,7 @@
         <span
           *ngFor="let supportedRegion of supportedRegions; first as isFirst; last as isLast"
           >{{ isFirst ? '' : (isLast ? ' and' : ',')}}
-          <a routerLink="/{{toSnakeCase(supportedRegion)}}"
+          <a [routerLink]="['/', toSnakeCase(supportedRegion)]"
             >{{ supportedRegion | titlecase }}</a
           >{{ isLast ? '.' : ''}}</span
         >
